# lcota.github.io

./: CNAME  README.md  _config.yml  aind_links.md  courses.md  index.html  index.md  linalgmindgame.md  mathstatslinks.md  nycparks.py  params.json  pythonsetup.md  tradingsystems.md
practice/: corr.csv  dag.py  dag2.py  dag3.py  dag5.py  dag6.py  multi_package_template.md  pca.py  returns.csv  singletonfactory.py  test.py
practice/apirecon/: .env.example  .gitignore  CUSTOMIZATION.md  README.md  analyze_log.py  init.sh  pyproject.toml  run_capture.sh  traffic_logger.py
practice/apirecon/bruno_collection/: bruno.json
practice/apirecon/bruno_collection/Session/: ping.bru
practice/apirecon/bruno_collection/environments/: peloton.bru
practice/apirecon/src/peloton/: __init__.py  __main__.py  auth.py  client.py  config.py  models.py
practice/apirecon/src/peloton/tasks/: definitions.py  manifest.py  runner.py
practice/cachedags/: cache.py  features.py  pyproject.toml  pyrightconfig.json  workflow.py
practice/dagimpls/: dag4.py
practice/studies/: DataPrep.ipynb  EDA.ipynb  Report.ipynb  StrategyEvaluation.ipynb  StrategyStats.xlsm  Summary Report - Predicting Winners and Losers with CPI + GDP.docx  ccf_check.py  cpi_all.xlsm  dataprep.py  etf_data_download.ipynb  funcs.py  logreg.py  model_analysis.py  notes.md  pyrightconfig.json  report.py  risk_parity.py  rp_cpi_ism.xlsm  scratch.py  summaryResults.R
practice/studies/cpi_macro/: .RData  .Rhistory  backtest_data_dictionary.xlsx  datatools.py  eda.R  features.py  optim_example.py  plotting.py  strategy.py  (+3 more)
(+144 files in other folders)
