[project]
name = "peloton-api-recon"
version = "0.1.0"
description = "API recon client for Peloton — async httpx queries and CLI token management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.scripts]
peloton = "peloton.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/peloton"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
